--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,9 +6,6 @@
 </head>
 <body>
 <div id="app"></div>
-<script src="node_modules/react/dist/react.js"></script>
-<script src="node_modules/react-dom/dist/react-dom.js"></script>
-<script src="js/App.js"></script>
+<script src="public/bundle.js"></script>
 </body>
 </html>
-</doctype>
