--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Search | Bruno's List</title>
+  <link rel="stylesheet" href="public/main.css">
 </head>
 <body>
 <div id="app"></div>
